Small fix collapse border bottom

--- a/src/components/uiKit/FilterList/CollapsePlaceHolderFacet/index.module.scss
+++ b/src/components/uiKit/FilterList/CollapsePlaceHolderFacet/index.module.scss
@@ -1,6 +1,9 @@
 .collapseLikeFacet {
   .collapse {
-    border: none;
+    &,
+    :global(.ant-collapse-item) {
+      border: none;
+    }
 
     div[class$='-header'] {
       color: unset !important;
