--- a/src/components/uiKit/FilterList/Filters.module.scss
+++ b/src/components/uiKit/FilterList/Filters.module.scss
@@ -35,7 +35,8 @@
 
   .customFilterContainer {
     margin-top: 8px;
-    :global(.ant-collapse) {
+    :global(.ant-collapse),
+    :global(.ant-collapse-item) {
       border: none;
     }
   }
